feed generation with cache